<resources>
    <string name="app_name">YiGO</string>
    <string name="button">Inicia Sesión</string>
    <string name="button2">Registrarse</string>
    <string name="button3">Empresa</string>
    <string name="button4">Persona</string>
    <string name="imageview">Haz que sobre amor, no comida</string>
    <string name="imageview2">¿Aun no tienes cuenta?</string>
    <string name="imageview3">Fondo</string>
    <string name="imageview4">logo</string>
    <string name="textview3">El mejor sabor es compartir</string>
    <string name="imageview6">logo</string>
    <string name="imageview7">casa</string>
    <string name="imageview8">persona</string>
    <string name="nombre">Nombre</string>
    <string name="unete_a_yigo">!Unete a YiGO¡</string>
    <string name="nete_a_yigo">!Únete a YIGO¡</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="razon_social">Razon Social</string>
    <string name="nit">Nit</string>
    <string name="telefono">Telefono</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="todo">rut</string>
    <string name="terminos_y_condiciones2">Terminos y condiciones</string>
    <string name="registrarse2">Registrarse</string>
    <string name="nombre2">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="cedula">Cedula</string>
    <string name="telefono2">Telefono</string>
    <string name="correo_electronico2">Correo electronico</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="logo">TODO</string>
    <string name="correo_electronico3">Correo electronico</string>
    <string name="contrase_a3">Contraseña</string>
    <string name="ingreso_donante">Ingresar</string>
    <string name="textview6">Bienvenido</string>
    <string name="lema">El mejor sabor es compartir</string>
</resources>